Fixed Markers position, they were behind the map, and applied new styles

--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -9,25 +9,63 @@ body{
 
 
 #map1{
+
 	height: 100%; 
+
+  .geocoding-marker {
+    height: 30px !important; 
+    width:30px !important;
+    -webkit-border-radius: 100%;
+    border-radius: 100%;
+    background-clip: padding-box;
+    /* stops bg color from leaking outside the border: */
+    background-color: rgba(253, 154, 0, 0.8);
+    box-shadow: 0 0 4px 3px rgba(255, 255, 255, 0.6), 0 0 0 4px rgba(255, 88, 1, 0.4), 0 0 0 8px rgba(242, 129, 0, 0.24); 
+
+  }
+
+  .geocoding-marker:hover{
+    -webkit-transition: all 0.1s linear;
+    box-shadow: 0 0 6px 5px rgba(255, 255, 255, 0.7), 0 0 0 6px rgba(255, 88, 1, 0.7), 0 0 0 12px rgba(242, 129, 0, 0.7); 
+
+  }
+
+  .location-marker {
+    height: 30px !important; 
+    width:30px !important;
+    -webkit-border-radius: 100%;
+    border-radius: 100%;
+    background-clip: padding-box;
+    background-color: rgba(169, 171, 169, 0.8);
+    box-shadow: 0 0 4px 3px rgba(255, 255, 255, 0.6), 0 0 0 4px rgb(93, 92, 91), 0 0 0 8px rgba(130, 118, 105, 0.24);
+
+  }
+
+  .location-marker:hover{
+    -webkit-transition: all 0.1s linear; 
+    box-shadow: 0 0 6px 5px rgba(255, 255, 255, 0.6), 0 0 0 6px rgb(93, 92, 91), 0 0 0 8px rgba(130, 118, 105, 0.24);
+  }
+
 }
+
+
 
 
 
 .form-inline .form-group{
-    margin-left: 0 !important;
-    margin-right: 0 !important;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
 }
 
- .spacing{
-	 margin-left: 5px !important;
+.spacing{
+  margin-left: 5px !important;
 }
 
 
- .leaflet-container {
-        height: 600px;
-        width: 100%;
-        margin: 0 auto;
+.leaflet-container {
+  height: 600px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 #locations {
@@ -73,28 +111,28 @@ body{
 .small-heading {
 	font-size: 0.8em ! important;
 }
-	
- 
+
+
 .opacity-10 {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=10);
   opacity: 0.1;
 }
- 
+
 .opacity-20 {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
   opacity: 0.2;
 }
- 
+
 .opacity-50 {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
   opacity: 0.5;
 }
- 
+
 .opaque {
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
- 
+
 .transparent {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -109,22 +147,22 @@ body{
 
 
 .popup{
-    width:430px;
-    min-width: 200px;
-    padding: 10px;
-    margin: 5px 0;
-    padding-right: 10px;
-    border: 1px solid #f0ad4e;
-    border-left-width: 5px;
-    border-radius: 3px;
+  width:430px;
+  min-width: 200px;
+  padding: 10px;
+  margin: 5px 0;
+  padding-right: 10px;
+  border: 1px solid #f0ad4e;
+  border-left-width: 5px;
+  border-radius: 3px;
   
 
 
   button{
-      margin-right:15px;
+    margin-right:15px;
   }
   h4 {
-      color: #f0ad4e;
+    color: #f0ad4e;
   }
 
   p {
@@ -134,63 +172,63 @@ body{
 }
 
 .dataEntry{
-    width:430px;
-    min-height: 200px;
-    padding: 10px;
-    margin: 5px 0;
-    padding-right: 10px;
-    border: 1px solid #5cb85c;
-    border-left-width: 5px;
-    border-radius: 3px;
-    
-   .form-control {
-      display: block;
-      width: 100%;
-      height: 25px;
-      padding: 3px 6px;
-      font-size: 11px;
-      line-height: 1.42857143;
-      color: #555;
-      background-color: #fff;
-      background-image: none;
-      border: 1px solid #ccc;
-      border-radius: 0px;
-      -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-      box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-      -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
-      -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-     transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  width:430px;
+  min-height: 200px;
+  padding: 10px;
+  margin: 5px 0;
+  padding-right: 10px;
+  border: 1px solid #5cb85c;
+  border-left-width: 5px;
+  border-radius: 3px;
 
-    }
+  .form-control {
+    display: block;
+    width: 100%;
+    height: 25px;
+    padding: 3px 6px;
+    font-size: 11px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 0px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+
+  }
   
   .big{
 
-       height: 26px;
-       font-size: 12px;
-      margin-bottom: 4px;
+   height: 26px;
+   font-size: 12px;
+   margin-bottom: 4px;
 
-    } 
-    .success{
-       color:#449d44
-    } 
-  
-  .form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control{
-    background-color:#FFFFFF;
-  }
+ } 
+ .success{
+   color:#449d44
+ } 
 
-  button{
-      margin-right:15px;
-  }
-  
-  h4.danger{
-    color:d9534f;
-    font-size: 14px;
-  }
+ .form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control{
+  background-color:#FFFFFF;
+}
 
-  p {
-    margin: 2px;
-    padding:2px;
-  }
+button{
+  margin-right:15px;
+}
+
+h4.danger{
+  color:d9534f;
+  font-size: 14px;
+}
+
+p {
+  margin: 2px;
+  padding:2px;
+}
 }
 
 
